@@ -3,6 +3,7 @@
 * + libimage-sane-perl frontend
   - scanimage-perl and scanadf-perl frontends
 * Fixed bug writing multipage hOCR files.
+* Fixed bug switching between Tesseract and Cuneiform (particularly for German).
 
 
 1.8.2 (01.06.2017):
